--- a/GameServer/pom.xml
+++ b/GameServer/pom.xml
@@ -41,5 +41,21 @@
             <artifactId>disruptor</artifactId>
             <version>3.4.4</version>
         </dependency>
+
+        <!--样板代码库lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--单元测试-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
