--- a/GameServer/pom.xml
+++ b/GameServer/pom.xml
@@ -50,11 +50,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--单元测试-->
+        <!--单元测试——JUnit 5-->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
