--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -21,5 +21,26 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!--slf4j日志框架的门面类-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.20</version>
+        </dependency>
+
+        <!--配置文件处理库-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
+        <!--yaml配置处理库-->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 </project>
