--- a/GameServer/pom.xml
+++ b/GameServer/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+        <!--自研底层库Core的依赖-->
+        <dependency>
+            <groupId>com.romje</groupId>
+            <artifactId>Core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!--slf4j日志框架的门面类-->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -56,6 +63,27 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.9.2</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--字节码操作库-->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.29.2-GA</version>
+        </dependency>
+
+        <!--配置文件处理库-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.7</version>
+        </dependency>
+
+        <!--yaml配置处理库-->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.27</version>
         </dependency>
     </dependencies>
 </project>
