--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -29,6 +29,14 @@
             <version>1.7.20</version>
         </dependency>
 
+        <!--log4j2对于slf4j的实现-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.20.0</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!--log4j2的使用版本-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -55,12 +63,6 @@
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.29.2-GA</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.20.0</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
