--- a/Dependency/pom.xml
+++ b/Dependency/pom.xml
@@ -67,7 +67,7 @@
             <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
-                <version>3.29.2-GA</version>
+                <version>3.30.2-GA</version>
             </dependency>
 
             <!--配置文件处理库-->
@@ -89,6 +89,13 @@
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>0.10.2</version>
+            </dependency>
+
+            <!--字节码处理库-->
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>1.14.8</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
