--- a/Dependency/pom.xml
+++ b/Dependency/pom.xml
@@ -105,6 +105,13 @@
                 <version>3.19.6</version>
             </dependency>
 
+            <!-- fast json 依赖 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.83</version>
+            </dependency>
+
             <!-- Netty 相关依赖 -->
             <dependency>
                 <groupId>io.netty</groupId>
